--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import '../styles/Variables.scss';
+
 .tabElement {
   width: 33.33%;
   text-align: center;
@@ -5,7 +7,7 @@
   cursor: pointer;
 
   &:hover {
-    background-color: #5c636ab7;
+    background-color: $gray-400;
   }
   &:first-of-type {
     border-top-left-radius: 10px !important;
@@ -18,11 +20,11 @@
 }
 
 .active {
-  background-color: #5c636a;
+  background-color: $gray-500;
 }
 
 .tabContainer {
-  background-color: gray;
+  background-color: $main-color;
   display: flex;
   width: 100%;
   justify-content: center;
